[project]
name = "langchain-doubleword"
version = "0.2.0"
description = "An integration package connecting Doubleword and LangChain / LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Doubleword", email = "info@doubleword.ai" }]
keywords = ["langchain", "langgraph", "doubleword", "llm", "openai", "batch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.34",
    "langchain-openai>=0.3.0",
    "openai>=2.0.0,<3",
    "autobatcher>=0.4.0",
]

[project.urls]
Homepage = "https://doubleword.ai"
Documentation = "https://docs.doubleword.ai"
Repository = "https://github.com/doublewordai/langchain-doubleword"
Issues = "https://github.com/doublewordai/langchain-doubleword/issues"

[dependency-groups]
test = [
    "langchain-tests>=0.3.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-socket>=0.7",
    "syrupy>=4.6",
    "freezegun>=1.5",
]
test_integration = [
    "pytest-xdist>=3.6",
    "httpx>=0.27",
]
lint = [
    "ruff>=0.6",
]
typing = [
    "mypy>=1.10",
    "types-requests",
]
dev = [
    "langchain-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_doubleword"]

[tool.hatch.build.targets.sdist]
include = [
    "langchain_doubleword/**/*.py",
    "langchain_doubleword/py.typed",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "T20", # flake8-print
]
ignore = ["E501"] # line length handled by formatter

[tool.pytest.ini_options]
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
asyncio_mode = "auto"
markers = [
    "requires: mark tests as requiring an optional dependency",
    "compile: mark placeholder test used to compile integration tests without running them",
    "scheduled: mark tests that run only on schedule",
]
filterwarnings = [
    "ignore::langchain_core._api.beta_decorator.LangChainBetaWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
