[project]
name = "async-agents-langgraph"
version = "0.1.0"
description = "Recursive multi-agent research via LangGraph + langchain-doubleword (autobatcher)"
requires-python = ">=3.11"
dependencies = [
    "langchain-doubleword",
    "langgraph>=0.2.50",
    "requests>=2.31",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

# When running this example out of the parent repo, the local package is
# picked up via the source tree path below. Replace with the published
# version once `langchain-doubleword` is on PyPI.
[tool.uv.sources]
langchain-doubleword = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
