[project]
name = "langgraph-basic"
version = "0.1.0"
description = "Basic LangGraph workflow run against ChatDoubleword and ChatDoublewordBatch"
requires-python = ">=3.11"
dependencies = [
    "langchain-doubleword",
    "langgraph>=0.2.50",
]

[tool.uv.sources]
langchain-doubleword = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compare.py"]
